--- a/css/style3.css
+++ b/css/style3.css
@@ -1,1 +1,50 @@
-/* */
+body{
+    width: 98%;
+    margin: auto auto;  
+    }
+
+h1{
+    background: #f5f4f1;
+    border-top: 1px solid #cccccc;
+    border-left: 1px solid #cccccc;
+    border-right: 1px solid #cccccc;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 21px;
+    letter-spacing: 0.9px;
+    padding: 7px 0 9px 0;
+    text-align: center;
+    text-transform: uppercase;
+    border-color: #dddddd;
+    margin-bottom: 0;
+    display: block;
+    }
+  
+li a{
+    border-left: 1px solid #cccccc;
+    border-right: 1px solid #cccccc;
+    border-bottom: 1px solid #cccccc;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    letter-spacing: 0.5px;
+    font-size: 19px;
+    color:#000000;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-left: 12px;
+    text-decoration: none;
+    display: block;
+    }
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    }    
+
+li {
+    margin: 0;
+    }
+
+li a:hover{  
+    background: #71387c;
+    color: #ffffff;
+    }
