--- a/css/style5.css
+++ b/css/style5.css
@@ -1,1 +1,36 @@
-/* */
+body {
+    margin: 0 0;
+    }
+  
+.squares {
+    width: 100vh;
+    height: 100vh;
+    margin: 0 auto;
+    }
+  
+.squares div {
+    display: inline-block;
+    text-align: center;
+    vertical-align: 300px;
+    font-size: 1.5em;
+    float:left;
+    }
+  
+.squares div p {
+    margin: 0 0;
+    display: table-cell;
+    vertical-align: middle;
+    width: 20vh;
+    height: 20vh;
+    }
+
+.blue {
+    background: #6b8fd4;
+    color: #ffcf73;
+    }    
+
+.yellow {
+    background: #ffcf73;
+    color: #6b8fd4;
+    }
+  
